fix(RichText): Increase margin bottom. Otherwise the dotted buttons of the slideshow will be overlapped by the next img on mobile

--- a/src/app/rich-text/rich-text.component.css
+++ b/src/app/rich-text/rich-text.component.css
@@ -1,3 +1,4 @@
-app-rich-text h1 {
+app-rich-text h1,
+.slideshow {
   margin-bottom: var(--vertical-margin);
 }
